--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.2"
+    "express": "^4.17.2",
+    "nanoid": "^3.2.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
